# pyppl_runcmd

./: .pre-commit-config.yaml  .tagitrc  README.md  pyppl_runcmd.py  pyproject.toml  requirements.txt  setup.py  tox.ini
tests/: test_runcmd.py
